--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress": "^15.2.0"
   },
   "dependencies": {
-    "@faker-js/faker": "^10.0.0"
+    "@faker-js/faker": "^10.0.0",
+    "cypress-plugin-api": "^2.11.2"
   }
 }
