--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "test:ui": "cypress open",
     "test:web": "cypress run --spec 'cypress/e2e/web/**/*.cy.js'",
     "test:api": "cypress run --spec 'cypress/e2e/api/**/*.cy.js'",
-    "test:chrome": "cypress run --browser chrome"
+    "test:chrome": "cypress run --browser chrome",
+    "allure:serve": "allure serve allure-results --port 5050 --host 0.0.0.0",
+    "allure:report": "allure generate -c allure-results -o allure-report",
+    "allure:open": "allure open allure-report"
   },
   "devDependencies": {
+    "allure-commandline": "^2.34.1",
+    "allure-cypress": "^3.4.1",
     "cypress": "^15.2.0"
   },
   "dependencies": {
